# Pi-Hole

./: .gitignore  README.md  env_template  pihole_display.py  pyproject.toml
Pi_Hole_Ad_Blocker/: README.txt
my_pi_hole/: pi_hole_display.py  pyproject.toml
rgb_display_test/: .gitignore  api_test.py  display_test.py  requirements.txt  rgb_display_minipitft_test.py  stats.py
