[project]
name = "my-pi-hole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-blinka>=8.56.0",
    "adafruit-circuitpython-rgb-display>=3.13",
    "numpy>=2.2.4",
    "pihole6api>=0.1.7",
    "pillow>=11.1.0",
    "rpi-gpio>=0.7.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]
